@@ -1,4 +1,5 @@
-- Decrrease minimimum LOD distances to 1
+- Add option to load into game with vanilla settings enabled by default
+- Decrease minimimum LOD distances to 1
 
 
 Version 0.9.2 -
